# rust_anybar

./: .travis.yml  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml  test.yml
ci/: before_deploy.sh  script.sh
src/: main.rs
