[package]
name = "anybar_rs"
version = "1.0.19"
authors = ["Stephan Hügel <urschrei@gmail.com>"]
description = "A Rust application for controlling Anybar 0.2.3"
repository = "https://github.com/urschrei/rust_anybar"
readme = "README.md"
keywords = ["Anybar"]
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "4.0.25", features = ["cargo"] }

[profile.release]
lto = true

[[bin]]
name = "anybar_rs"
